# HLA-NoVR-Launcher

./: .gitignore  CMakeLists.txt  GameMenu.qml  Launcher.qml  Main.qml  README.md  Updating.qml  background.ogv.uid  downloadmanager.h  export_presets.cfg  game_menu.gd  game_menu.gd.uid  game_menu.tscn  game_menu_theme.tres  gamemenu.cpp  gamemenu.h  icon.png.import  index.html  launcher.cpp  launcher.gd  launcher.gd.uid  launcher.h  launcher.tscn  logo.png.import  main.cpp  main.js  networkhandler.h  package.json  pnpm-lock.yaml  preload.js  project.godot  translations.csv  translations.csv.import  translations.de.translation  translations.en.translation  translations.ru.translation
fonts/: DINish-Bold.otf.import  DINish-BoldItalic.otf.import  DINish-Italic.otf.import  DINish-Regular.otf.import
icons/: mute.svg.import  volume.svg.import
